tests/valid/replace/replace_through_ref.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    let mut r: unrestricted &mut unrestricted isize = (&mut x) in
    let _: unrestricted isize = (replace *r 42) in
    x
}
