tests/invalid/reborrow/deref_while_reborrowed_mut.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    let mut r: affine &mut unrestricted isize = (&mut x) in
    let mut r2: affine &mut unrestricted isize = (&mut *r) in
    let v: unrestricted isize = (*r) in
    let _: unrestricted () = (*r2 = 42) in
    v
}
